cabal-version:       2.2
name:                lsp-types
version:             1.6.0.0
synopsis:            Haskell library for the Microsoft Language Server Protocol, data types

description:         An implementation of the types to allow language implementors to
                     support the Language Server Protocol for their specific language.

homepage:            https://github.com/haskell/lsp
license:             MIT
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
copyright:           Alan Zimmerman, 2016-2021
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

flag force-ospath
  default: False
  manual: False
  description: Force a version bound on filepath library, to enable 'OsPath'.

library
  exposed-modules:     Language.LSP.Types
                     , Language.LSP.Types.Capabilities
                     , Language.LSP.Types.SMethodMap
                     , Data.IxMap
  other-modules:
                       Language.LSP.Types.Internal.Generated
                     , Language.LSP.Types.Internal.Lenses

                     , Language.LSP.Types.CodeAction
                     , Language.LSP.Types.Common
                     , Language.LSP.Types.LspId
                     , Language.LSP.Types.Location
                     , Language.LSP.Types.MarkupContent
                     , Language.LSP.Types.Method
                     , Language.LSP.Types.Message
                     , Language.LSP.Types.Parsing
                     , Language.LSP.Types.Progress
                     , Language.LSP.Types.Registration
                     , Language.LSP.Types.SemanticTokens
                     , Language.LSP.Types.Uri
                     , Language.LSP.Types.Utils
                     , Language.LSP.Types.Uri.OsPath
                     , Language.LSP.Types.WorkspaceEdit

                     , Language.LSP.MetaModel.Types
                     , Language.LSP.MetaModel.CodeGen

                     , Language.Haskell.TH.Compat
                     , Data.Row.Aeson
 -- other-extensions:
  ghc-options:         -Wall -Wno-unticked-promoted-constructors
  build-depends:       base >= 4.11 && < 5
                     , aeson >=1.2.2.0
                     , binary
                     , containers
                     , data-default
                     , deepseq
                     , Diff >= 0.2
                     , dlist
                     , file-embed
                     , hashable
                     , lens >= 4.15.2
                     , mtl < 2.4
                     , network-uri >= 2.6
                     , mod
                     , row-types
                     , scientific
                     , some
                     , text
                     , template-haskell
                     , transformers
                     , unordered-containers
                     , exceptions
                     , safe
  if flag(force-ospath)
    build-depends: filepath ^>= 1.4.100.0
  else
    build-depends: filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: StrictData

test-suite lsp-types-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Spec
                       CapabilitiesSpec
                       JsonSpec
                       LocationSpec
                       MethodSpec
                       ServerCapabilitiesSpec
                       SemanticTokensSpec
                       TypesSpec
                       URIFilePathSpec
                       WorkspaceEditSpec
  build-depends:       base
                     , QuickCheck
                     -- for instance Arbitrary Value
                     , aeson >= 2.0.3.0
                     , filepath
                     , hspec
                     , lsp-types
                     , lens >= 4.15.2
                     , network-uri
                     , row-types
                     , quickcheck-instances
                     , text
                     , tuple
  build-tool-depends:  hspec-discover:hspec-discover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell/lsp
